fix safari image stretch

--- a/src/assets/css/custom.scss
+++ b/src/assets/css/custom.scss
@@ -60,6 +60,7 @@ input {
 }
 
 .photo__img {
+  display: block;
   width: 100%;
   transition: filter 0.3s;
 }
